dedup and replace text refactoring